--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -119,11 +119,11 @@
                 </Button>
                 <Button Command="{x:Bind ViewModel.StartGenshinCommand}">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="0,0,4,0" Text="Start Genshin" />
+                        <TextBlock Margin="0,0,4,0" Text="{x:Bind ViewModel.ShortGameName}" />
                         <Image
                             Width="16"
                             Height="16"
-                            Source="../Assets/Images/Start_Genshin.png" />
+                            Source="{x:Bind ViewModel.StartGameIcon}" />
                     </StackPanel>
                     <ToolTipService.ToolTip>
                         <StackPanel Orientation="Horizontal">
