--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
@@ -9,6 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="EditCharacterPageRoot"
     mc:Ignorable="d">
+
     <Grid
         Padding="4"
         Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
@@ -33,7 +34,9 @@
             <Button
                 Grid.Column="1"
                 HorizontalAlignment="Right"
-                Content="Disable Character" />
+                Command="{x:Bind ViewModel.DisableCharacterCommand}"
+                Content="Disable Character"
+                ToolTipService.ToolTip="Opens a popup first with more information" />
 
         </Grid>
 
@@ -49,24 +52,35 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <controls:CustomImage
                         Width="200"
+                        ButtonHorizontalAlignment="Left"
                         EditButtonCommand="{x:Bind ViewModel.PickImageCommand}"
-                        ImageUri="{x:Bind ViewModel.CharacterVm.ImageUri, Mode=OneWay}" />
+                        ImageUri="{x:Bind ViewModel.CharacterVm.ImageUri, Mode=TwoWay}" />
+                    <StackPanel
+                        Grid.Row="1"
+                        Margin="0,4"
+                        Background="{ThemeResource ControlFillColorSecondaryBrush}"
+                        Orientation="Horizontal">
+                        <TextBlock Margin="0,0,16,0" Text="Internal Name (Id): " />
+                        <TextBlock IsTextSelectionEnabled="True" Text="{x:Bind ViewModel.CharacterVm.InternalName}" />
+                    </StackPanel>
 
 
                     <TextBlock
-                        Grid.Row="1"
+                        Grid.Row="2"
                         Margin="0,8,0,8"
                         Text="Set Display Name:" />
                     <TextBox
-                        Grid.Row="2"
+                        Grid.Row="3"
                         HorizontalAlignment="Stretch"
                         FontFamily="{StaticResource GenshinFont}"
                         FontSize="16"
                         Text="{x:Bind ViewModel.CharacterVm.DisplayName, Mode=TwoWay}"
                         TextAlignment="Center" />
+
                 </Grid>
 
                 <StackPanel
@@ -155,12 +169,16 @@
                 <Button
                     Margin="0,16"
                     HorizontalAlignment="Center"
-                    Content="Reset"
-                    IsEnabled="False" />
+                    Command="{x:Bind ViewModel.RevertChangesCommand}"
+                    Content="Undo"
+                    ToolTipService.ToolTip="Reverts changes not saved" />
                 <Button
                     HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    Background="{ThemeResource AccentFillColorDefaultBrush}"
+                    Command="{x:Bind ViewModel.SaveChangesCommand}"
                     Content="Save"
-                    IsEnabled="False" />
+                    ToolTipService.ToolTip="Saves changes to disk" />
             </StackPanel>
         </Grid>
 
