--- a/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterManager/EditCharacterPage.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:controls1="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views.CharacterManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,6 +13,7 @@
     mc:Ignorable="d">
 
     <Grid
+        x:Name="EditCharacterPageGrid"
         Padding="4"
         Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
         CornerRadius="10">
@@ -35,12 +37,26 @@
                     ToolTipService.ToolTip="Open Character's mod folder" />
             </StackPanel>
 
+
             <Button
                 Grid.Column="1"
                 HorizontalAlignment="Right"
-                Command="{x:Bind ViewModel.DisableCharacterCommand}"
+                Command="{x:Bind ViewModel.DisableCharacterCommand, Mode=OneWay}"
                 Content="Disable Character"
-                ToolTipService.ToolTip="Opens a popup first with more information" />
+                IsEnabled="{x:Bind ViewModel.CharacterStatus.IsEnabled, Mode=OneWay}"
+                ToolTipService.ToolTip="Opens a popup first with more information"
+                Visibility="{x:Bind ViewModel.CharacterStatus.IsEnabled, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+            <Button
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Command="{x:Bind ViewModel.EnableCharacterCommand, Mode=OneWay}"
+                Content="Enable Character"
+                IsEnabled="{x:Bind ViewModel.CharacterStatus.IsDisabled, Mode=OneWay}"
+                ToolTipService.ToolTip="Opens a popup first with more information"
+                Visibility="{x:Bind ViewModel.CharacterStatus.IsDisabled, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+
 
         </Grid>
 
@@ -82,8 +98,10 @@
                         HorizontalAlignment="Stretch"
                         FontFamily="{StaticResource GenshinFont}"
                         FontSize="16"
-                        Text="{x:Bind ViewModel.CharacterVm.DisplayName, Mode=TwoWay}"
+                        Text="{x:Bind ViewModel.CharacterVm.DisplayName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         TextAlignment="Center" />
+
+
 
                 </Grid>
 
@@ -105,7 +123,9 @@
             <Grid
                 Grid.Column="1"
                 Margin="8,0"
-                Background="{ThemeResource LayerFillColorDefaultBrush}">
+                Padding="4"
+                Background="{ThemeResource LayerFillColorDefaultBrush}"
+                CornerRadius="8">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -201,6 +221,7 @@
                 </Button>
 
 
+
                 <ListView
                     Grid.Row="2"
                     Margin="0,8"
@@ -227,6 +248,7 @@
                 </ListView>
 
 
+
                 <Button
                     Grid.Row="3"
                     HorizontalAlignment="Stretch"
@@ -240,6 +262,20 @@
             </Grid>
         </Grid>
 
+        <Grid Grid.Row="1" VerticalAlignment="Bottom">
+            <Button
+                Width="200"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Content="Reset Character"
+                ToolTipService.ToolTip="Resets Character values to their default">
+                <Button.Flyout>
+                    <Flyout>
+                        <Button Command="{x:Bind ViewModel.ResetCharacterToDefaultCommand}" Content="Reset Character Settings" />
+                    </Flyout>
+                </Button.Flyout>
+            </Button>
+        </Grid>
 
     </Grid>
 </Page>
