--- a/src/GIMI-ModManager.WinUI/Views/StartupPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/StartupPage.xaml
@@ -29,12 +29,13 @@
                 Text="First time startup" />
 
             <ComboBox
-                SelectionChanged="GameSelector_OnSelectionChanged"
                 Grid.Column="1"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
+                IsEnabled="False"
                 ItemsSource="{x:Bind ViewModel.Games}"
-                SelectedItem="{x:Bind ViewModel.SelectedGame, Mode=TwoWay}" />
+                SelectedItem="{x:Bind ViewModel.SelectedGame, Mode=TwoWay}"
+                SelectionChanged="GameSelector_OnSelectionChanged" />
         </Grid>
 
         <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled">
