--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -229,7 +229,7 @@
                         RelativePanel.AlignLeftWithPanel="True"
                         RelativePanel.Below="itemHero"
                         Text="{x:Bind ViewModel.ShownCharacter.DisplayName}"
-                        TextWrapping="WrapWholeWords" />
+                        TextWrapping="Wrap" />
                     <!--  Style="{ThemeResource TitleTextBlockStyle}"  -->
 
 
