--- a/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
@@ -1,12 +1,105 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<Window
+<winUiEx:WindowEx
     x:Class="GIMI_ModManager.WinUI.Views.ModUpdateAvailableWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:services="using:GIMI_ModManager.Core.Services"
+    xmlns:winUiEx="using:WinUIEx"
     mc:Ignorable="d">
 
-    <Grid />
-</Window>
+    <Window.SystemBackdrop>
+        <MicaBackdrop />
+    </Window.SystemBackdrop>
+
+    <Grid>
+        <Grid.Resources />
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10*" />
+            <ColumnDefinition Width="6*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <StackPanel Orientation="Horizontal">
+
+                <TextBlock
+                    Margin="10"
+                    FontSize="20"
+                    FontWeight="Bold"
+                    Text="Update Available" />
+
+                <controls:LinkButton Link="{x:Bind ViewModel.ModPath, Mode=OneWay}" Text="{x:Bind ViewModel.ModPath.LocalPath, Mode=OneWay, FallbackValue=ModPath}" />
+            </StackPanel>
+
+            <ListView
+                Grid.Row="1"
+                ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
+                SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="services:UpdateCheckResult">
+                        <Grid Margin="0,8" CornerRadius="4">
+
+                            <controls:BoolBorder
+                                BorderColor="{ThemeResource AccentFillColorSelectedTextBackgroundBrush}"
+                                BorderSize="2"
+                                ShowBorder="{x:Bind IsNewer}">
+                                <Grid Margin="8">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        IsTextSelectionEnabled="True"
+                                        Style="{ThemeResource SubtitleTextBlockStyle}"
+                                        Text="{x:Bind FileName}" />
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        Text="New since last check" />
+
+                                    <Button
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        Content="Download"
+                                        IsEnabled="False" />
+                                </Grid>
+                            </controls:BoolBorder>
+                        </Grid>
+
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <Grid Grid.Row="2" Padding="10">
+                <Button
+                    Width="200"
+                    Height="50"
+                    HorizontalAlignment="Left"
+                    Content="Ignore Update" />
+            </Grid>
+
+        </Grid>
+        <Grid Grid.Column="1">
+            <WebView2 x:Name="ModPageBrowser" Source="{x:Bind ViewModel.ModPage, Mode=OneWay}" />
+        </Grid>
+
+    </Grid>
+</winUiEx:WindowEx>
